--- a/src/test/resources/conf/Configuration.properties
+++ b/src/test/resources/conf/Configuration.properties
@@ -1,3 +1,10 @@
 browserUrl=http://secure.smartbearsoftware.com/samples/testcomplete11/WebOrders/login.aspx
 WebAppUrl=http://automationpractice.com/index.php
+orangeUrl=https://opensource-demo.orangehrmlive.com/
 EtsyUrl=https://www.etsy.com/
+
+dbHost=jdbc:oracle:thin:@techotrialdb.c2cuobkpe1em.us-east-2.rds.amazonaws.com:1521/xe
+dbUsername=hr
+dbPassword=hr
+
+
