--- a/src/test/resources/conf/Configuration.properties
+++ b/src/test/resources/conf/Configuration.properties
@@ -1,10 +1,14 @@
 browserUrl=http://secure.smartbearsoftware.com/samples/testcomplete11/WebOrders/login.aspx
 WebAppUrl=http://automationpractice.com/index.php
 orangeUrl=https://opensource-demo.orangehrmlive.com/
+MyApplication=file:///Users/nargiza/Downloads/TEch.html
 EtsyUrl=https://www.etsy.com/
 
 dbHost=jdbc:oracle:thin:@techotrialdb.c2cuobkpe1em.us-east-2.rds.amazonaws.com:1521/xe
 dbUsername=hr
 dbPassword=hr
+
+awsURL=https://calculator.s3.amazonaws.com/index.html
+HRapp=file:///Users/nargiza/Downloads/Project.html
 
 
